--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="text-sci">
                 <h2>Proiect<br><span>Ecuații și Inecuații iraționale</span></h2>
 
-                <p>Rusu Daniel și Șeremet Sorina
+                <p>Rusu Daniel TRT-231 și Șeremet Sorina DAW-241
                     <p>Colegiul Universității Tehnice din Moldova</p>
                 </p>
 
